--- a/index.html
+++ b/index.html
@@ -17,14 +17,6 @@
       },
       {
         category: 'Work',
-        name: 'Drive',
-        key: 'd',
-        url: 'https://drive.google.com',
-        search: '/drive/search?q={}',
-        color: 'linear-gradient(135deg, #4285f4, #4259f4)',
-      },
-      {
-        category: 'Work',
         name: 'GitHub',
         key: 'g',
         url: 'https://github.com',
@@ -33,54 +25,14 @@
       },
       {
         category: 'Work',
-        name: 'Keep',
-        key: 'k',
-        url: 'https://keep.google.com',
-        search: '/#search/text={}',
+        name: 'GitMoji',
+        key: 'G',
+        url: 'https://gitmoji.carloscuesta.me/',
+        search: '',
         color: 'linear-gradient(135deg, #fca550, #fcd050)',
       },
       {
-        category: 'Lurk',
-        name: 'Hunt',
-        key: 'p',
-        url: 'https://www.producthunt.com',
-        search: '/search?q={}',
-        color: 'linear-gradient(135deg, #da552f, #da802f)',
-      },
-      {
-        category: 'Lurk',
-        name: 'Reddit',
-        key: 'r',
-        url: 'https://www.reddit.com',
-        search: '/search?q={}',
-        color: 'linear-gradient(135deg, #5f99cf, #5f7dcf)',
-      },
-      {
-        category: 'Lurk',
-        name: 'Unsplash',
-        key: 'u',
-        url: 'https://unsplash.com/new',
-        search: '/search/{}',
-        color: '#000',
-      },
-      {
-        category: 'Listen',
-        name: 'Hypem',
-        key: 'h',
-        url: 'https://hypem.com/popular',
-        search: '/search/{}',
-        color: 'linear-gradient(135deg, #83c441, #62c441)',
-      },
-      {
-        category: 'Listen',
-        name: 'SoundCloud',
-        key: 'S',
-        url: 'https://soundcloud.com/discover',
-        search: '/search?q={}',
-        color: 'linear-gradient(135deg, #ff8800, #ffc800)',
-      },
-      {
-        category: 'Listen',
+        category: 'Work',
         name: 'Spotify',
         key: 's',
         url: 'https://open.spotify.com',
@@ -88,12 +40,28 @@
         color: 'linear-gradient(135deg, #1DB954, #1Da974)',
       },
       {
-        category: 'Watch',
-        name: 'Netflix',
-        key: 'n',
-        url: 'https://www.netflix.com/browse',
+        category: 'Lurk',
+        name: 'Feedly',
+        key: 'F',
+        url: 'https://feedly.com/i',
+        search: '/discover/sources/search/topic/{}',
+        color: 'linear-gradient(135deg, #2bb24c, #30c755)',
+      },
+      {
+        category: 'Lurk',
+        name: 'Reddit',
+        key: 'r',
+        url: 'https://www.reddit.com',
         search: '/search?q={}',
-        color: 'linear-gradient(135deg, #e50914, #e53509)',
+        color: 'linear-gradient(135deg, #da552f, #da802f)',
+      },
+      {
+        category: 'Lurk',
+        name: 'Twitter',
+        key: 'T',
+        url: 'https://www.twitter.com',
+        search: '/search/?q={}',
+        color: 'linear-gradient(135deg, #259ce6, #0b76b8)',
       },
       {
         category: 'Watch',
@@ -106,57 +74,17 @@
         category: 'Watch',
         name: 'YouTube',
         key: 'y',
-        url: 'https://youtube.com/feed/subscriptions',
+        url: 'https://www.youtube.com/feed/subscriptions',
         search: '/results?search_query={}',
         color: 'linear-gradient(135deg, #cd201f, #cd4c1f)',
       },
       {
-        category: 'Learn',
-        name: 'Academy',
-        key: 'a',
-        url: 'https://www.khanacademy.org',
-        search: '/search?page_search_query={}',
-        color: 'linear-gradient(135deg, #9cb443, #80b443)',
-      },
-      {
-        category: 'Learn',
-        name: 'Coursera',
-        key: 'c',
-        url: 'https://www.coursera.org',
-        search: '/courses?query={}',
-        color: 'linear-gradient(135deg, #407ED7, #4058d7)',
-      },
-      {
-        category: 'Learn',
-        name: 'Egghead',
-        key: 'e',
-        url: 'https://egghead.io',
-        search: '/search?q={}',
-        color: 'linear-gradient(135deg, #171C23, #171923)',
-      },
-      {
-        category: 'Download',
-        name: 'Bay',
-        key: 'b',
-        url: 'https://thepiratebay.org',
-        search: '/search/{}',
-        color: 'linear-gradient(135deg, #d2b9a6, #d2c4a6)',
-      },
-      {
-        category: 'Download',
-        name: 'YTS',
-        key: 'Y',
-        url: 'https://yts.mx/browse-movies/0/all/all/7/seeds/0/en',
-        search: '/browse-movies/{}',
-        color: 'linear-gradient(135deg, #2f2f2f, #373737)',
-      },
-      {
-        category: 'Download',
-        name: '7digital',
-        key: '7',
-        url: 'https://us.7digital.com',
-        search: '/search?q={}',
-        color: 'linear-gradient(135deg, #07606e, #07466e)',
+        category: 'Watch',
+        name: 'ForoCoches',
+        key: 'f',
+        url: 'https://forocoches.com',
+        search: '',
+        color: 'linear-gradient(135deg, #9c9c9c, #7d7d7d)',
       },
     ],
 
@@ -184,9 +112,9 @@
      * Default search suggestions for the specified queries.
      */
     defaultSuggestions: {
-      g: ['g/issues', 'g/pulls', 'gist.github.com'],
-      r: ['r/r/unixporn', 'r/r/startpages'],
-      S: ['S/you/likes', 'S/discover/the-upload'],
+      g: ['gist.github.com', 'g/trending', 'g/issues', 'g/pulls'],
+      r: ['r/r/webdev', 'r/r/web_design', 'r/r/coding', 'r/r/FrontEnd'],
+      T: ['T/explore', 'T/notifications', 'T/messages', 'T/profile'],
     },
 
     /**
@@ -198,7 +126,7 @@
     /**
      * Open triggered queries in a new tab.
      */
-    newTab: true,
+    newTab: false,
 
     /**
      * Use command colors when domains are matched and on the help page.
@@ -240,10 +168,10 @@
 <style type="text/css">
   :root {
     /* colors */
-    --background: #fffef8;
-    --foreground: #3e4959;
-    --searchBackground: #3e4959;
-    --searchForeground: #fffef8;
+    --background: #3e4959;
+    --foreground: #fffef8;
+    --searchBackground: #fffef8;
+    --searchForeground: #3e4959;
 
     /* fonts */
     --font-family: Lato, sans-serif;
@@ -471,7 +399,7 @@
     margin-right: 1rem;
     border-radius: 50%;
     background: var(--foreground);
-    color: var(--background);
+    color: var(--foreground);
     font-size: 0.8rem;
     line-height: 2rem;
     text-align: center;
@@ -488,7 +416,7 @@
     right: 0;
     bottom: 0.4rem;
     left: 0;
-    height: 0.4rem;
+    height: 0.1rem;
     transition: 0.2s;
     transform: translateX(-2rem);
     background: var(--foreground);
@@ -1326,3 +1254,5 @@
     twentyFourHour: CONFIG.twentyFourHourClock,
   });
 </script>
+
+<!-- https://www.reddit.com/r/startpages/comments/6o7aaf/creation_tilde_v6/?ref=share&ref_source=link -->
