📝 [MINOR] Update links

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       },
       {
         category: 'Work',
-        name: 'GitMoji',
-        key: 'G',
-        url: 'https://gitmoji.carloscuesta.me/',
-        search: '',
-        color: 'linear-gradient(135deg, #fca550, #fcd050)',
+        name: 'Codepen',
+        key: 'c',
+        url: 'https://codepen.io',
+        search: '/search/pens?q=',
+        color: 'linear-gradient(135deg, #ababab, #444857)',
       },
       {
         category: 'Work',
@@ -41,50 +41,51 @@
       },
       {
         category: 'Lurk',
-        name: 'Feedly',
-        key: 'F',
-        url: 'https://feedly.com/i',
-        search: '/discover/sources/search/topic/{}',
-        color: 'linear-gradient(135deg, #2bb24c, #30c755)',
-      },
-      {
-        category: 'Lurk',
         name: 'Reddit',
         key: 'r',
         url: 'https://www.reddit.com',
         search: '/search?q={}',
-        color: 'linear-gradient(135deg, #da552f, #da802f)',
+        color: 'linear-gradient(135deg, #FF8b60, #FF4500)',
       },
       {
         category: 'Lurk',
         name: 'Twitter',
-        key: 'T',
+        key: 't',
         url: 'https://www.twitter.com',
         search: '/search/?q={}',
         color: 'linear-gradient(135deg, #259ce6, #0b76b8)',
       },
       {
-        category: 'Watch',
-        name: 'Twitch',
-        key: 't',
-        url: 'https://www.twitch.tv/directory/following',
-        color: 'linear-gradient(135deg, #6441a5, #7d41a5)',
+        category: 'Lurk',
+        name: 'Hunt',
+        key: 'p',
+        url: 'https://www.producthunt.com',
+        search: '/search?q={}',
+        color: 'linear-gradient(135deg, #da552f, #da802f)',
       },
       {
-        category: 'Watch',
-        name: 'YouTube',
-        key: 'y',
-        url: 'https://www.youtube.com/feed/subscriptions',
-        search: '/results?search_query={}',
-        color: 'linear-gradient(135deg, #cd201f, #cd4c1f)',
-      },
-      {
-        category: 'Watch',
+        category: 'Read',
         name: 'ForoCoches',
         key: 'f',
         url: 'https://forocoches.com',
         search: '',
         color: 'linear-gradient(135deg, #9c9c9c, #7d7d7d)',
+      },
+      {
+        category: 'Read',
+        name: 'Burbuja',
+        key: 'b',
+        url: 'https://www.burbuja.info/inmobiliaria/forums/#',
+        search: '',
+        color: 'linear-gradient(135deg, #166eac, #0d4e7d)',
+      },
+      {
+        category: 'Read',
+        name: 'Feedly',
+        key: 'F',
+        url: 'https://feedly.com/i',
+        search: '/discover/sources/search/topic/{}',
+        color: 'linear-gradient(135deg, #2bb24c, #30c755)',
       },
     ],
 
